--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-06-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-ios.pk (pk_cmd_ios): New function.
+	* poke/pk-cmd-ios.c (pk_cmd_ios): Rewrite to use the Poke version.
+
+2024-06-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-cmd-misc.pk: New file.
 	* poke/poke.pk: Load pk-cmd-misc.pk.
 	* poke/Makefile.am (dist_app_DATA): Add pk-cmd-misc.pk.
