--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-06-13  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/pk-cmd-ios.pk (pk_cmd_sub): New funtion.
+	* poke/pk-cmd-ios.c (pk_cmd_sub): Rewrite to use the Poke version.
+
 2024-06-12  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-cmd-ios.pk (pk_cmd_ios): New function.
