--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-06-13  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-ios.pk (pk_cmd_proc): Fix trimming of digits for
+	zero values.
+
+2024-06-13  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-cmd-ios.pk (pk_cmd_nbd): New function.
 	* poke/pk-cmd-ios.c (pk_cmd_nbd): Rewrite to use the Poke version.
 
