pkl: ast: show more fields of break/continue statement
2024-06-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-ast.c (pkl_ast_format_1): Show `nframes' and
	`npopes' fields of `PKL_AST_BREAK_CONTINUE_STMT' node.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-06-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-ast.c (pkl_ast_format_1): Show `nframes' and
+	`npopes' fields of `PKL_AST_BREAK_CONTINUE_STMT' node.
+
 2024-06-29  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* testsuite/poke.libpoke/api.c (include "read-file.h"): Remove
