--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-06-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* testsuite/poke.pkl/break-while-7.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
+2024-06-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* testsuite/poke.pkl/break-while-3.pk: Use explicit
 	output base 10.
 	* testsuite/poke.pkl/break-while-4.pk: Likewise.
