--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-07-11  Emanuele Torre  <torreemanuele6@gmail.com>
+
+	* MAINTAINERS: add Emanuele Torre.
+	* etc/poke.rec: add Emanuele Torre.
+
 2024-07-08  Emanuele Torre  <torreemanuele6@gmail.com>
 
 	* pickles/pe.pk (PE_Opt_Hdr): loader_flags is not zero in many
