MAINTAINERS: fix typo
2024-07-11  Emanuele Torre  <torreemanuele6@gmail.com>

	* MAINTAINERS: fix typo.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2024-07-11  Emanuele Torre  <torreemanuele6@gmail.com>
 
+	* MAINTAINERS: fix typo.
+
+2024-07-11  Emanuele Torre  <torreemanuele6@gmail.com>
+
 	* MAINTAINERS: add Emanuele Torre.
 	* etc/poke.rec: add Emanuele Torre.
 
