poke: add field "optioness" info to .info type
This patch extends the output of the `.info type' dot-command to
include information about whether the struct fields are optional.
Example:

----
(big:poke) .info type Elf64_File
Class:      struct
Name:       Elf64_File
Complete:   no
Fields:
  Name     Type             Optional
  ehdr     Elf64_Ehdr       no
  shdr     Elf64_Shdr[]     yes
  phdr     Elf64_Phdr[]     yes
Methods:
  Name                     Type
  get_section_name         (offset<Elf_Word,8>)string
  get_symbol_name          (Elf64_Shdr,offset<Elf_Word,8>)string
  get_sections_by_name     (string)Elf64_Shdr[]
  get_sections_by_type     (Elf_Word)Elf64_Shdr[]
  section_name_p           (string)int<32>
  get_string               (offset<Elf_Word,8>)string
  get_group_signature      (Elf64_Shdr)string
  get_group_signatures     ()string[]
  get_section_group        (string)Elf64_Shdr[]
  vaddr_to_sec             (Elf64_Addr)int<32>
  vaddr_to_file_offset     (Elf64_Addr)Elf64_Addr
  get_load_base            ()Elf64_Addr
----

Note the new column "Optional" in the fields table.

2024-09-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-info.pk (pk_info_type): Print whether struct fields
	are optional or not.
	* doc/poke.texi (Pickles): Update accordingly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2024-09-16  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-info.pk (pk_info_type): Print whether struct fields
+	are optional or not.
+	* doc/poke.texi (Pickles): Update accordingly.
+
+2024-09-16  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-rt.pk: New field `foptional'.
 	* libpoke/pkl-gen.pks (struct_typifier): Initialize the value of
 	foptional in Pk_Type struct.
