--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-09-16  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-ios.c (file_cmd): Add flags to command synopsis.
+	(proc_cmd): Likewise.
+
+2024-09-16  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* doc/poke.texi (Write-only Partial Bytes): New section.
 
 2024-09-16  Jose E. Marchesi  <jemarch@gnu.org>
